tests/baselines/reference/commonTypeIntersection.errors.txt
commonTypeIntersection.ts(2,5): error TS2322: Type '{ __typename?: "TypeTwo" | undefined; } & { a: boolean; }' is not assignable to type '{ __typename?: "TypeOne" | undefined; } & { a: boolean; }'.
  Type '{ __typename?: "TypeTwo" | undefined; } & { a: boolean; }' is not assignable to type '{ __typename?: "TypeOne" | undefined; }'.
    Types of property '__typename' are incompatible.
      Type '"TypeTwo" | undefined' is not assignable to type '"TypeOne" | undefined'.
        Type '"TypeTwo"' is not assignable to type '"TypeOne"'.
commonTypeIntersection.ts(4,5): error TS2322: Type '{ __typename?: "TypeTwo" | undefined; } & string' is not assignable to type '{ __typename?: "TypeOne" | undefined; } & string'.
  Type '{ __typename?: "TypeTwo" | undefined; } & string' is not assignable to type '{ __typename?: "TypeOne" | undefined; }'.
    Types of property '__typename' are incompatible.
      Type '"TypeTwo" | undefined' is not assignable to type '"TypeOne" | undefined'.
        Type '"TypeTwo"' is not assignable to type '"TypeOne"'.


==== commonTypeIntersection.ts (2 errors) ====
    declare let x1: { __typename?: 'TypeTwo' } & { a: boolean };
    let y1: { __typename?: 'TypeOne' } & { a: boolean} = x1;  // should error here
        ~~
!!! error TS2322: Type '{ __typename?: "TypeTwo" | undefined; } & { a: boolean; }' is not assignable to type '{ __typename?: "TypeOne" | undefined; } & { a: boolean; }'.
!!! error TS2322:   Type '{ __typename?: "TypeTwo" | undefined; } & { a: boolean; }' is not assignable to type '{ __typename?: "TypeOne" | undefined; }'.
!!! error TS2322:     Types of property '__typename' are incompatible.
!!! error TS2322:       Type '"TypeTwo" | undefined' is not assignable to type '"TypeOne" | undefined'.
!!! error TS2322:         Type '"TypeTwo"' is not assignable to type '"TypeOne"'.
    declare let x2: { __typename?: 'TypeTwo' } & string;
    let y2: { __typename?: 'TypeOne' } & string = x2;  // should error here
        ~~
!!! error TS2322: Type '{ __typename?: "TypeTwo" | undefined; } & string' is not assignable to type '{ __typename?: "TypeOne" | undefined; } & string'.
!!! error TS2322:   Type '{ __typename?: "TypeTwo" | undefined; } & string' is not assignable to type '{ __typename?: "TypeOne" | undefined; }'.
!!! error TS2322:     Types of property '__typename' are incompatible.
!!! error TS2322:       Type '"TypeTwo" | undefined' is not assignable to type '"TypeOne" | undefined'.
!!! error TS2322:         Type '"TypeTwo"' is not assignable to type '"TypeOne"'.
    